blog/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 12m
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: www.justinhinze.com
      http:
        paths:
          - path: /
            backend:
              serviceName: blog-wp-service
              servicePort: 80
  tls:
    - hosts:
        - www.justinhinze.com
      secretName: justin-hinze-tls-secret
